Modify getIconURL routine on AbstractPlugin.